--- a/MapApp.Core/MapApp.Core.csproj
+++ b/MapApp.Core/MapApp.Core.csproj
@@ -10,6 +10,8 @@
   </ItemGroup>
 
    <ItemGroup>
+     <PackageReference Include="Dapper" Version="2.0.35" />
      <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+     <PackageReference Include="System.Data.SQLite" Version="1.0.112" />
    </ItemGroup>
 </Project>
