--- a/MapApp.Tests.MSTest/MapApp.Tests.MSTest.csproj
+++ b/MapApp.Tests.MSTest/MapApp.Tests.MSTest.csproj
@@ -92,6 +92,9 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Dapper">
+      <Version>2.0.35</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.9</Version>
     </PackageReference>
@@ -106,6 +109,9 @@
     </PackageReference>
     <PackageReference Include="MSTest.TestFramework">
       <Version>2.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Data.SQLite">
+      <Version>1.0.112</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
