--- a/MapApp/MapApp.csproj
+++ b/MapApp/MapApp.csproj
@@ -212,6 +212,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\map.png" />
+    <Content Include="Assets\tmpMapPin.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
