--- a/MapApp/MapApp.csproj
+++ b/MapApp/MapApp.csproj
@@ -215,7 +215,10 @@
     <Compile Include="Helpers\ResourceExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Map-Add-Pin-icon.png" />
     <Content Include="Assets\map.png" />
+    <Content Include="Assets\Maps-Polygon-icon.png" />
+    <Content Include="Assets\Maps-Polyline-icon.png" />
     <Content Include="Assets\tmpMapPin.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
