--- a/MapApp/MapApp.csproj
+++ b/MapApp/MapApp.csproj
@@ -140,10 +140,12 @@
     <Compile Include="Controls\AddMapElementButton.xaml.cs">
       <DependentUpon>AddMapElementButton.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DatabaseAccess\DatabaseAccessService.cs" />
     <Compile Include="Helpers\EnumToBooleanConverter.cs" />
     <Compile Include="Helpers\GeoMath.cs" />
     <Compile Include="Helpers\NavHelper.cs" />
     <Compile Include="Helpers\SettingsStorageExtensions.cs" />
+    <Compile Include="Helpers\StringColorConverter.cs" />
     <Compile Include="Models\DragDropCompletedData.cs" />
     <Compile Include="Models\DragDropData.cs" />
     <Compile Include="Models\DragDropStartingData.cs" />
