--- a/MapApp.Tests.MSTest/MapApp.Tests.MSTest.csproj
+++ b/MapApp.Tests.MSTest/MapApp.Tests.MSTest.csproj
@@ -119,6 +119,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseAccessTests\DatabaseAccessServiceTest.cs" />
+    <Compile Include="HelpersTests\EnumToBooleanConverterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
