--- a/MapApp.Tests.MSTest/MapApp.Tests.MSTest.csproj
+++ b/MapApp.Tests.MSTest/MapApp.Tests.MSTest.csproj
@@ -120,6 +120,7 @@
   <ItemGroup>
     <Compile Include="DatabaseAccessTests\DatabaseAccessServiceTest.cs" />
     <Compile Include="HelpersTests\EnumToBooleanConverterTest.cs" />
+    <Compile Include="HelpersTests\GeoMathTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
