--- a/MapApp.Tests.MSTest/MapApp.Tests.MSTest.csproj
+++ b/MapApp.Tests.MSTest/MapApp.Tests.MSTest.csproj
@@ -121,6 +121,7 @@
     <Compile Include="DatabaseAccessTests\DatabaseAccessServiceTest.cs" />
     <Compile Include="HelpersTests\EnumToBooleanConverterTest.cs" />
     <Compile Include="HelpersTests\GeoMathTest.cs" />
+    <Compile Include="HelpersTests\StringColorConverterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
