--- a/MapApp.Tests.MSTest/MapApp.Tests.MSTest.csproj
+++ b/MapApp.Tests.MSTest/MapApp.Tests.MSTest.csproj
@@ -124,6 +124,7 @@
     <Compile Include="HelpersTests\StringColorConverterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServicesTests\MapElementItemFactoryServiceTests.cs" />
+    <Compile Include="ServicesTests\WeatherServiceTests.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
     </Compile>
